@@ -1,43 +1,52 @@
 package com.umc.product.test.application.service;
 
-import com.umc.product.common.domain.enums.ChallengerPart;
-import com.umc.product.curriculum.application.port.in.command.ManageCurriculumUseCase;
-import com.umc.product.curriculum.application.port.in.command.ManageOriginalWorkbookMissionUseCase;
-import com.umc.product.curriculum.application.port.in.command.ManageOriginalWorkbookUseCase;
-import com.umc.product.curriculum.application.port.in.command.ManageWeeklyCurriculumUseCase;
-import com.umc.product.curriculum.application.port.in.command.dto.curriculum.CreateWeeklyCurriculumCommand;
-import com.umc.product.curriculum.application.port.in.command.dto.workbook.ChangeOriginalWorkbookStatusCommand;
-import com.umc.product.curriculum.application.port.in.command.dto.workbook.CreateOriginalWorkbookCommand;
-import com.umc.product.curriculum.domain.enums.OriginalWorkbookStatus;
-import com.umc.product.organization.application.port.in.query.GetGisuUseCase;
-import com.umc.product.test.application.port.in.command.SeedCurriculumUseCase;
-import com.umc.product.test.application.port.in.command.dto.SeedCurriculumCommand;
-import com.umc.product.test.application.port.in.command.dto.SeedCurriculumResult;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import java.util.Objects;
+
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.umc.product.common.domain.enums.ChallengerPart;
+import com.umc.product.common.domain.enums.ChallengerTrack;
+import com.umc.product.common.domain.enums.GisuLearningType;
+import com.umc.product.curriculum.application.port.in.command.ManageCurriculumUseCase;
+import com.umc.product.curriculum.application.port.in.command.ManageOriginalWorkbookMissionUseCase;
+import com.umc.product.curriculum.application.port.in.command.ManageOriginalWorkbookUseCase;
+import com.umc.product.curriculum.application.port.in.command.ManageWeeklyCurriculumUseCase;
+import com.umc.product.curriculum.application.port.in.command.dto.curriculum.CreateCurriculumCommand;
+import com.umc.product.curriculum.application.port.in.command.dto.curriculum.CreateWeeklyCurriculumCommand;
+import com.umc.product.curriculum.application.port.in.command.dto.workbook.ChangeOriginalWorkbookStatusCommand;
+import com.umc.product.curriculum.application.port.in.command.dto.workbook.CreateOriginalWorkbookCommand;
+import com.umc.product.curriculum.application.port.in.query.GetCurriculumUseCase;
+import com.umc.product.curriculum.domain.enums.OriginalWorkbookStatus;
+import com.umc.product.curriculum.domain.exception.CurriculumDomainException;
+import com.umc.product.curriculum.domain.exception.CurriculumErrorCode;
+import com.umc.product.organization.application.port.in.query.GetGisuUseCase;
+import com.umc.product.test.application.port.in.command.SeedCurriculumUseCase;
+import com.umc.product.test.application.port.in.command.dto.SeedCurriculumCommand;
+import com.umc.product.test.application.port.in.command.dto.SeedCurriculumResult;
+
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+
 /**
  * Curriculum 시딩 서비스. ADR-017 참조.
  * <p>
- * 활성 기수(또는 지정 기수)에 대해 ADMIN 제외 파트별로 다음 골격을 생성한다.
+ * 활성 기수(또는 지정 기수)의 학습 방식에 맞는 파트 또는 기본 트랙별로 다음 골격을 생성한다.
  * <pre>
- *  Curriculum (gisu, part)
+ *  Curriculum (gisu, part 또는 track)
  *    └─ WeeklyCurriculum (week 1 ~ N)
  *         └─ OriginalWorkbook (MAIN, READY)
  *              └─ OriginalWorkbookMission (M개)
  * </pre>
  * 선택적으로 {@code releaseRequesterMemberId} 가 지정되면 모든 워크북을 READY → RELEASED 로
  * 전환해 챌린저가 즉시 배포받을 수 있도록 한다.
+ * 기존 상위 커리큘럼에 주차가 없으면 제목을 유지한 채 재사용하고, 주차가 있으면 중복 시딩을 거부한다.
  * <p>
  * Hexagonal 원칙을 따라 다른 도메인의 UseCase 만 호출하며, 각 Create 호출은 자체 트랜잭션
  * (Curriculum/Workbook/Mission CommandService 가 모두 {@code @Transactional}) 으로 격리된다.
@@ -53,10 +62,14 @@ public class CurriculumSeedService implements SeedCurriculumUseCase {
     private static final List<ChallengerPart> DEFAULT_PARTS = Arrays.stream(ChallengerPart.values())
         .filter(p -> p != ChallengerPart.ADMIN)
         .toList();
+    private static final List<ChallengerTrack> DEFAULT_TRACKS = Arrays.stream(ChallengerTrack.values())
+        .filter(ChallengerTrack::isBasic)
+        .toList();
 
     private final DummyCurriculumFactory dummyCurriculumFactory;
     private final GetGisuUseCase getGisuUseCase;
     private final ManageCurriculumUseCase manageCurriculumUseCase;
+    private final GetCurriculumUseCase getCurriculumUseCase;
     private final ManageWeeklyCurriculumUseCase manageWeeklyCurriculumUseCase;
     private final ManageOriginalWorkbookUseCase manageOriginalWorkbookUseCase;
     private final ManageOriginalWorkbookMissionUseCase manageOriginalWorkbookMissionUseCase;
@@ -65,25 +78,23 @@ public class CurriculumSeedService implements SeedCurriculumUseCase {
     @Transactional(propagation = Propagation.NOT_SUPPORTED)
     public SeedCurriculumResult seed(SeedCurriculumCommand command) {
         Long gisuId = command.gisuId() != null ? command.gisuId() : getGisuUseCase.getActiveGisuId();
-        List<ChallengerPart> parts = resolveParts(command.parts());
+        List<CreateCurriculumCommand> curricula = resolveCurricula(gisuId, command);
         int weeks = command.weeksPerCurriculum();
         int missionsPerWorkbook = command.missionsPerWorkbook();
 
         long startedAt = System.currentTimeMillis();
         log.info(
-            "curriculum seed start: gisuId={}, parts={}, weeks={}, missionsPerWorkbook={}, release={}",
-            gisuId, parts.size(), weeks, missionsPerWorkbook, command.releaseRequesterMemberId() != null
+            "curriculum seed start: gisuId={}, curricula={}, weeks={}, missionsPerWorkbook={}, release={}",
+            gisuId, curricula.size(), weeks, missionsPerWorkbook, command.releaseRequesterMemberId() != null
         );
 
         Counters counters = new Counters();
 
-        for (ChallengerPart part : parts) {
-            Long curriculumId = tryCreateCurriculum(gisuId, part, counters);
+        for (CreateCurriculumCommand curriculum : curricula) {
+            Long curriculumId = tryPrepareCurriculum(curriculum, counters);
             if (curriculumId == null) {
                 continue;
             }
-            counters.curriculumIds.add(curriculumId);
-
             List<Long> weeklyIds = tryCreateWeeklyCurriculaBulk(curriculumId, weeks, counters);
             if (weeklyIds.isEmpty()) {
                 continue;
@@ -130,20 +141,60 @@ public class CurriculumSeedService implements SeedCurriculumUseCase {
         );
     }
 
-    private List<ChallengerPart> resolveParts(Collection<ChallengerPart> parts) {
-        if (parts == null || parts.isEmpty()) {
-            return DEFAULT_PARTS;
+    private List<CreateCurriculumCommand> resolveCurricula(Long gisuId, SeedCurriculumCommand command) {
+        GisuLearningType learningType = getGisuUseCase.getById(gisuId).learningType();
+        List<ChallengerPart> parts = command.parts() == null ? List.of() : command.parts();
+        List<ChallengerTrack> tracks = command.tracks() == null ? List.of() : command.tracks();
+        if (parts.stream().anyMatch(Objects::isNull) || tracks.stream().anyMatch(Objects::isNull)) {
+            throw new CurriculumDomainException(CurriculumErrorCode.INVALID_CURRICULUM_LEARNING_TYPE);
         }
-        return parts.stream().filter(p -> p != ChallengerPart.ADMIN).collect(Collectors.toList());
+        if (learningType == GisuLearningType.TRACK) {
+            if (!parts.isEmpty()) {
+                throw new CurriculumDomainException(CurriculumErrorCode.INVALID_CURRICULUM_LEARNING_TYPE);
+            }
+            if (tracks.stream().anyMatch(track -> !track.isBasic())) {
+                throw new CurriculumDomainException(CurriculumErrorCode.UNSUPPORTED_CURRICULUM_TRACK);
+            }
+            return (tracks.isEmpty() ? DEFAULT_TRACKS : tracks).stream()
+                .distinct()
+                .map(track -> dummyCurriculumFactory.nextCurriculumCommand(gisuId, null, track))
+                .toList();
+        }
+        if (!tracks.isEmpty()) {
+            throw new CurriculumDomainException(CurriculumErrorCode.INVALID_CURRICULUM_LEARNING_TYPE);
+        }
+        return (parts.isEmpty() ? DEFAULT_PARTS : parts).stream()
+            .filter(part -> part != ChallengerPart.ADMIN)
+            .map(part -> dummyCurriculumFactory.nextCurriculumCommand(gisuId, part, null))
+            .toList();
     }
 
-    private Long tryCreateCurriculum(Long gisuId, ChallengerPart part, Counters counters) {
+    private Long tryPrepareCurriculum(CreateCurriculumCommand command, Counters counters) {
         try {
-            return manageCurriculumUseCase.create(dummyCurriculumFactory.nextCurriculumCommand(gisuId, part));
+            return createOrReuseEmptyCurriculum(command, counters);
         } catch (Exception e) {
             counters.curriculumFailed++;
-            log.error("curriculum seed: create curriculum failed (gisuId={}, part={}): {}", gisuId, part, e.toString());
+            log.error("curriculum seed: create curriculum failed (gisuId={}, part={}, track={}): {}",
+                command.gisuId(), command.part(), command.track(), e.toString());
             return null;
+        }
+    }
+
+    private Long createOrReuseEmptyCurriculum(CreateCurriculumCommand command, Counters counters) {
+        try {
+            Long curriculumId = manageCurriculumUseCase.create(command);
+            counters.curriculumIds.add(curriculumId);
+            return curriculumId;
+        } catch (CurriculumDomainException exception) {
+            if (exception.getBaseCode() != CurriculumErrorCode.CURRICULUM_ALREADY_EXISTS) {
+                throw exception;
+            }
+            var existing = getCurriculumUseCase.getCurriculumOverview(
+                command.gisuId(), command.part(), command.track(), null);
+            if (!existing.weeks().isEmpty()) {
+                throw exception;
+            }
+            return existing.curriculumId();
         }
     }
 
